2000-11-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-e18.el, skk-is-n.el: From "experimental".

	* SKK-MK: Modify according to it.

2000-11-28  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* experimental/skk-dcomp.el (skk-dcomp-end-point): New variable.
	(skk-dcomp-toggle-key): New variable.
	(skk-kana-input): Set `skk-dcomp-end-point'.
	Set `skk-dcomp-start-point' value as a marker.
	Do not remove a completed part of SKK-HENKAN-KEY if this command
	key is equal to `skk-toggle-character' (or `skk-toggle-kana').
	(skk-kakutei): Set `skk-dcomp-start-point' and
	`skk-dcomp-end-point' to nil.
	(skk-start-henkan): New advice.
	(keyboard-quit): Ditto.

2000-11-28  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-tut.el (skk-tutorial): Call `skk-nicola-setup-tutorial'
	for skk-nicola.

2000-11-28  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* experimental/skk-dcomp.el (skk-kana-input): Use second argument
	SILENT for `skk-completion'.

	* skk-comp.el (skk-completion): New optional argument SILENT.

2000-11-27  Tetsuo Tsukamoto  <czkmt@remus.dti.ne.jp>

	* skk-isearch.el (skk-isearch-setup): Remember the current buffer.

	* skk-tut.el (skktut-init-variables-alist): Set `skk-rule-tree'
	for skk-nicola.

	* skk-vars.el: Modify group dependencies for skk-tut.
	(skk-isearch-current-buffer): New variable.

	* skk.el (skk-mode): Call `skk-kanagaki-initialize'.

2000-11-27  FURUE Hideyuki  <furue@kke.co.jp>

	* skk.el (skk-emulate-original-map): Remove `skk-cancel-undo-boundary'.
	(skk-kana-input): Reset `skk-kana-start-point' when ``NEXT have
	at least one branch''.
	Do `skk-cancel-undo-boundary' only when kana insertion.
	(skk-delete-backward-char): kana cleanup.
	(skk-undo): kana cleanup.
	(skk-kakutei-cleanup-buffer): Enable undo again if
	`skk-undo-kakutei-word-only' is set.
	(skk-undo-kakutei): Disable undo temporarily if
	`skk-undo-kakutei-word-only' is set.
	(skk-set-henkan-point-subr): Disable undo temporarily if
	`skk-undo-kakutei-word-only' is set.